fix bug 96530. delay loading of unicharutil dll till we really need it. r=dp sr=waterson